2005-04-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Fix a bug in initialising the version to a non-literal.

	* doc/Doxyfile.in: Use VERSION instead of WFMATH_VERSION as intended by
	  autoconf.

2005-04-11  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version to 0.3.4 for release, and clean
	  up a bit.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* wfmath.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

Sunday, October 10th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Changed CXXFLAGS to AM_CXXFLAGS in the atlas
	  Makefile.am to fix a configure warning.
	* Change a comma operator in an assert() to && to
	  fix a compile warning.

Saturday, October 9th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Added missing 'inline' keywords in int_to_string.h.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Minor update to the rpm spec. No need to re-spin the release.

Wednesday, July 19th, 2004   Ron Steinke <rsteinke@w-link.net>

	* 0.3.3 release.

Wednesday, June 30th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Erik Hjortsberg's gcc 3.4 compile fixes, part 2.

Wednesday, June 30th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Erik Hjortsberg's gcc 3.4 compile fixes.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Fix devel dependencies in rpm spec.

2004-06-03  James Turner  <james@worldforge.org>

	* XCode project updates

Saturday, March 6th, 2004 Al Riddoch <alriddoch@zepler.org>

	* wfmath/atlasconv.h: Add typedefs so the tests still work
	  with the 0.4 series.

Wednesday, March 3rd, 2004 James Turner <james@worldforge.org>

	* Made atlasconv.h use the new Atlas::Message public typdefs, instead
	  of the current Element typedefs, which are becoming private.
	* ProjectBuilder updates for X-Code 
	
Wednesday, February 18th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Fixed 'no newline at end of file' warning for timestamp_test.cpp.
