@@ -1,168 +1,56 @@
-# Configure paths for Atlas
-# Adapted by Al Riddoch
-# stolen from Sam Lantinga of SDL
-# stolen from Manish Singh
-# stolen back from Frank Belew
-# stolen from Manish Singh
-# Shamelessly stolen from Owen Taylor
+dnl PKG_CHECK_MODULES(GSTUFF, gtk+-2.0 >= 1.3 glib = 1.3.4, action-if, action-not)
+dnl defines GSTUFF_LIBS, GSTUFF_CFLAGS, see pkg-config man page
+dnl also defines GSTUFF_PKG_ERRORS on error
+AC_DEFUN([PKG_CHECK_MODULES], [
+  succeeded=no
 
-dnl AM_PATH_ATLAS([MINIMUM-VERSION, [ACTION-IF-FOUND [, ACTION-IF-NOT-FOUND]]])
-dnl Test for Atlas, and define ATLAS_CFLAGS and ATLAS_LIBS
-dnl
-AC_DEFUN(AM_PATH_ATLAS,
-[dnl 
-dnl Get the cflags and libraries from the atlas-config script
-dnl
-AC_LANG_CPLUSPLUS
-AC_ARG_WITH(atlas-prefix,[  --with-atlas-prefix=PFX   Prefix where Atlas is installed (optional)],
-            atlas_prefix="$withval", atlas_prefix="")
-AC_ARG_WITH(atlas-exec-prefix,[  --with-atlas-exec-prefix=PFX Exec prefix where Atlas is installed (optional)],
-            atlas_exec_prefix="$withval", atlas_exec_prefix="")
-AC_ARG_ENABLE(atlastest, [  --disable-atlastest       Do not try to compile and run a test Atlas program],
-		    , enable_atlastest=yes)
-
-  if test x$atlas_exec_prefix != x ; then
-     atlas_args="$atlas_args --exec-prefix=$atlas_exec_prefix"
-     if test x${ATLAS_CONFIG+set} != xset ; then
-        ATLAS_CONFIG=$atlas_exec_prefix/bin/atlas-config
-     fi
-  fi
-  if test x$atlas_prefix != x ; then
-     atlas_args="$atlas_args --prefix=$atlas_prefix"
-     if test x${ATLAS_CONFIG+set} != xset ; then
-        ATLAS_CONFIG=$atlas_prefix/bin/atlas-config
-     fi
+  if test -z "$PKG_CONFIG"; then
+    AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
   fi
 
-  AC_PATH_PROG(ATLAS_CONFIG, atlas-config, no)
-  min_atlas_version=ifelse([$1], ,0.3.11,$1)
-  AC_MSG_CHECKING(for Atlas - version >= $min_atlas_version)
-  no_atlas=""
-  if test "$ATLAS_CONFIG" = "no" ; then
-    no_atlas=yes
+  if test "$PKG_CONFIG" = "no" ; then
+     echo "*** The pkg-config script could not be found. Make sure it is"
+     echo "*** in your path, or set the PKG_CONFIG environment variable"
+     echo "*** to the full path to pkg-config."
+     echo "*** Or see http://www.freedesktop.org/software/pkgconfig to get pkg-config."
   else
-    ATLAS_CFLAGS=`$ATLAS_CONFIG $atlasconf_args --cflags`
-    ATLAS_LIBS=`$ATLAS_CONFIG $atlasconf_args --libs`
+     PKG_CONFIG_MIN_VERSION=0.9.0
+     if $PKG_CONFIG --atleast-pkgconfig-version $PKG_CONFIG_MIN_VERSION; then
+        AC_MSG_CHECKING(for $2)
 
-    atlas_major_version=`$ATLAS_CONFIG $atlas_args --version | \
-           sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\1/'`
-    atlas_minor_version=`$ATLAS_CONFIG $atlas_args --version | \
-           sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/'`
-    atlas_micro_version=`$ATLAS_CONFIG $atlas_config_args --version | \
-           sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\3/'`
-    if test "x$enable_atlastest" = "xyes" ; then
-      ac_save_CFLAGS="$CFLAGS"
-      ac_save_LIBS="$LIBS"
-      CFLAGS="$CFLAGS $ATLAS_CFLAGS"
-      LIBS="$LIBS $ATLAS_LIBS"
-dnl
-dnl Now check if the installed Atlas is sufficiently new. (Also sanity
-dnl checks the results of atlas-config to some extent)
-dnl
-      rm -f conf.atlastest
-      AC_TRY_RUN([
-#include <stdio.h>
-#include <stdlib.h>
-#include <string.h>
+        if $PKG_CONFIG --exists "$2" ; then
+            AC_MSG_RESULT(yes)
+            succeeded=yes
 
-char*
-my_strdup (char *str)
-{
-  char *new_str;
-  
-  if (str)
-    {
-      new_str = (char *)malloc ((strlen (str) + 1) * sizeof(char));
-      strcpy (new_str, str);
-    }
-  else
-    new_str = NULL;
-  
-  return new_str;
-}
+            AC_MSG_CHECKING($1_CFLAGS)
+            $1_CFLAGS=`$PKG_CONFIG --cflags "$2"`
+            AC_MSG_RESULT($$1_CFLAGS)
 
-int main (int argc, char *argv[])
-{
-  int major, minor, micro;
-  char *tmp_version;
+            AC_MSG_CHECKING($1_LIBS)
+            $1_LIBS=`$PKG_CONFIG --libs "$2"`
+            AC_MSG_RESULT($$1_LIBS)
+        else
+            $1_CFLAGS=""
+            $1_LIBS=""
+            ## If we have a custom action on failure, don't print errors, but 
+            ## do set a variable so people can do so.
+            $1_PKG_ERRORS=`$PKG_CONFIG --errors-to-stdout --print-errors "$2"`
+            ifelse([$4], ,echo $$1_PKG_ERRORS,)
+        fi
 
-  /* This hangs on some systems (?)
-  system ("touch conf.atlastest");
-  */
-  { FILE *fp = fopen("conf.atlastest", "a"); if ( fp ) fclose(fp); }
-
-  /* HP/UX 9 (%@#!) writes to sscanf strings */
-  tmp_version = my_strdup("$min_atlas_version");
-  if (sscanf(tmp_version, "%d.%d.%d", &major, &minor, &micro) != 3) {
-     printf("%s, bad version string\n", "$min_atlas_version");
-     exit(1);
-   }
-
-   if (($atlas_major_version > major) ||
-      (($atlas_major_version == major) && ($atlas_minor_version > minor)) ||
-      (($atlas_major_version == major) && ($atlas_minor_version == minor) && ($atlas_micro_version >= micro)))
-    {
-      return 0;
-    }
-  else
-    {
-      printf("\n*** 'atlas-config --version' returned %d.%d.%d, but the minimum version\n", $atlas_major_version, $atlas_minor_version, $atlas_micro_version);
-      printf("*** of Atlas required is %d.%d.%d. If atlas-config is correct, then it is\n", major, minor, micro);
-      printf("*** best to upgrade to the required version.\n");
-      printf("*** If atlas-config was wrong, set the environment variable ATLAS_CONFIG\n");
-      printf("*** to point to the correct copy of atlas-config, and remove the file\n");
-      printf("*** config.cache before re-running configure\n");
-      return 1;
-    }
-}
-
-],, no_atlas=yes,[echo $ac_n "cross compiling; assumed OK... $ac_c"])
-       CFLAGS="$ac_save_CFLAGS"
-       LIBS="$ac_save_LIBS"
-     fi
-  fi
-  if test "x$no_atlas" = x ; then
-     AC_MSG_RESULT(yes)
-     ifelse([$2], , :, [$2])     
-  else
-     AC_MSG_RESULT(no)
-     if test "$ATLAS_CONFIG" = "no" ; then
-       echo "*** The atlas-config script installed by Atlas could not be found"
-       echo "*** If Atlas was installed in PREFIX, make sure PREFIX/bin is in"
-       echo "*** your path, or set the ATLAS_CONFIG environment variable to the"
-       echo "*** full path to atlas-config."
+        AC_SUBST($1_CFLAGS)
+        AC_SUBST($1_LIBS)
      else
-       if test -f conf.atlastest ; then
-        :
-       else
-          echo "*** Could not run Atlas test program, checking why..."
-          CFLAGS="$CFLAGS $ATLAS_CFLAGS"
-          LIBS="$LIBS $ATLAS_LIBS"
-          AC_TRY_LINK([
-#include <stdio.h>
-],      [ return 0; ],
-        [ echo "*** The test program compiled, but did not run. This usually means"
-          echo "*** that the run-time linker is not finding Atlas or finding the wrong"
-          echo "*** version of Atlas. If it is not finding Atlas, you'll need to set your"
-          echo "*** LD_LIBRARY_PATH environment variable, or edit /etc/ld.so.conf to point"
-          echo "*** to the installed location  Also, make sure you have run ldconfig if that"
-          echo "*** is required on your system"
-	  echo "***"
-          echo "*** If you have an old version installed, it is best to remove it, although"
-          echo "*** you may also be able to get things to work by modifying LD_LIBRARY_PATH"],
-        [ echo "*** The test program failed to compile or link. See the file config.log for the"
-          echo "*** exact error that occured. This usually means Atlas was incorrectly installed"
-          echo "*** or that you have moved Atlas since it was installed. In the latter case, you"
-          echo "*** may want to edit the atlas-config script: $ATLAS_CONFIG" ])
-          CFLAGS="$ac_save_CFLAGS"
-          LIBS="$ac_save_LIBS"
-       fi
+        echo "*** Your version of pkg-config is too old. You need version $PKG_CONFIG_MIN_VERSION or newer."
+        echo "*** See http://www.freedesktop.org/software/pkgconfig"
      fi
-     ATLAS_CFLAGS=""
-     ATLAS_LIBS=""
-     ifelse([$3], , :, [$3])
   fi
-  AC_SUBST(ATLAS_CFLAGS)
-  AC_SUBST(ATLAS_LIBS)
-  rm -f conf.atlastest
+
+  if test $succeeded = yes; then
+     ifelse([$3], , :, [$3])
+  else
+     ifelse([$4], , AC_MSG_ERROR([Library requirements ($2) not met; consider adjusting the PKG_CONFIG_PATH environment variable if your libraries are in a nonstandard prefix so pkg-config can find them.]), [$4])
+  fi
 ])
+
+
