@@ -1,3 +1,7 @@
+2003-xx-xx  Al Riddoch  <alriddoch@zepler.org>
+
+	* wfmath 0.3.4 released.
+
 2003-04-24  Al Riddoch  <alriddoch@zepler.org>
 
 	* wfmath 0.2.11 released.
